test/schemas/fail/invalid_base_types.sat
// ERROR: schemas/fail/invalid_base_types.sat(2): Base type is not a struct: int32
struct derived : int32 {}

struct base {}
// ERROR: schemas/fail/invalid_base_types.sat(6): Base type is not an integer: base
enum enum : base {}
